refactor: rename property type into dataset_type of a dataset metadata record

--- a/notebooks/data-prep/MIT-BIH Long-Term ECG Database.ipynb
+++ b/notebooks/data-prep/MIT-BIH Long-Term ECG Database.ipynb
@@ -105,7 +105,7 @@
     "        return str(self._df)\n",
     "        \n",
     "    def _create_metadata_file(self) -> pd.DataFrame:\n",
-    "        df_temp = pd.DataFrame(columns=[\"dataset_name\", \"collection_name\", \"train_path\", \"test_path\", \"type\", \"datetime_index\", \"split_at\", \"train_type\", \"train_is_normal\", \"input_type\", \"length\"])\n",
+    "        df_temp = pd.DataFrame(columns=[\"dataset_name\", \"collection_name\", \"train_path\", \"test_path\", \"dataset_type\", \"datetime_index\", \"split_at\", \"train_type\", \"train_is_normal\", \"input_type\", \"length\"])\n",
     "        df_temp.set_index([\"collection_name\", \"dataset_name\"], inplace=True)\n",
     "        df_temp.to_csv(self._filepath)\n",
     "        return df_temp\n",
@@ -126,7 +126,7 @@
     "        df_new = pd.DataFrame({\n",
     "            \"train_path\": train_path,\n",
     "            \"test_path\": test_path,\n",
-    "            \"type\": dataset_type,\n",
+    "            \"dataset_type\": dataset_type,\n",
     "            \"datetime_index\": datetime_index,\n",
     "            \"split_at\": split_at,\n",
     "            \"train_type\": train_type,\n",
