feat: add MGAB, Keogh, and KDD-TSAD datasets

--- a/notebooks/data-prep/GHL.ipynb
+++ b/notebooks/data-prep/GHL.ipynb
@@ -21,8 +21,7 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "from typing import Final\n",
-    "from collections.abc import Callable\n",
+    "from typing import List\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "from config import data_raw_folder, data_processed_folder\n",
@@ -73,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def list_regular_files(path: Path) -> list[Path]:\n",
+    "def list_regular_files(path: Path) -> List[Path]:\n",
     "    return [f for f in path.iterdir() if f.is_file()]\n",
     "\n",
     "def process(source: Path, target: Path, is_train: bool = False) -> int:\n",
