fix(datasets): fix wrong preprocessing of Kitsune and NASA datasets

--- a/notebooks/data-prep/UCI-Kitsune.ipynb
+++ b/notebooks/data-prep/UCI-Kitsune.ipynb
@@ -171,6 +171,7 @@
     "    df_label.columns = [\"is_anomaly\"]\n",
     "    df[\"is_anomaly\"] = df_label[\"is_anomaly\"]\n",
     "    del df_label\n",
+    "    df.index.name = \"timestamp\"\n",
     "    \n",
     "    filename = f\"{dataset_name}.test.csv\"\n",
     "    path = os.path.join(dataset_subfolder, filename)\n",
@@ -1123,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
