feat: transfer improved parameter values to param-config.json

--- a/notebooks/TimeEval parameter optimization analysis 4.ipynb
+++ b/notebooks/TimeEval parameter optimization analysis 4.ipynb
@@ -318,7 +318,7 @@
     "    # check if dataset is multivariate\n",
     "    dataset_dim = df.loc[df[\"dataset_name\"] == dataset_name, \"dataset_input_dimensionality\"].unique().item()\n",
     "    dataset_dim = dataset_dim.lower()\n",
-    "    \n",
+    "\n",
     "    auroc = {}\n",
     "    df_scores = pd.DataFrame(index=df_dataset.index)\n",
     "    skip_algos = []\n",
@@ -368,7 +368,7 @@
     "    else:\n",
     "        fig.add_trace(go.Scatter(x=df_dataset.index, y=df_dataset.iloc[:, 1], name=\"timeseries\"), 1, 1)\n",
     "    fig.add_trace(go.Scatter(x=df_dataset.index, y=df_dataset[\"is_anomaly\"], name=\"label\"), 2, 1)\n",
-    "    \n",
+    "\n",
     "    for item in algorithms:\n",
     "        algo, optim_params = item\n",
     "        fig.add_trace(go.Scatter(x=df_scores.index, y=df_scores[item], name=f\"{algo}={auroc[item]:.4f} ({optim_params})\"), 2, 1)\n",
@@ -390,7 +390,7 @@
     "    else:\n",
     "        axs[0].plot(df_dataset.index, df_dataset.iloc[:, 1], label=f\"timeseries\")\n",
     "    axs[1].plot(df_dataset.index, df_dataset[\"is_anomaly\"], label=\"label\")\n",
-    "    \n",
+    "\n",
     "    for item in algorithms:\n",
     "        algo, optim_params = item\n",
     "        axs[1].plot(df_scores.index, df_scores[item], label=f\"{algo}={auroc[item]:.4f} ({optim_params})\")\n",
@@ -1430,9 +1430,9 @@
     "\n",
     "- SAND: **Check why it failed on so many datasets!**\n",
     "- Random Black Forest (RR): **Only TIMEOUTs** --> perform search over n_estimators, n_trees, and bootstrap again\n",
-    "- PhaseSpace-SVM: `coef0=0,tol=0.001,project_phasespace=True,embed_dim_range=,gamma=1.0,nu=0.35,degree=3,kernel=\"rbf\"` (tol, coef0: make no difference; nu: smaller is better; gamma: 0.8 is very slightly better for ROC_AUC, but worse for PR_AUC; degree: makes no difference)\n",
-    "- PST: `window_size=1,sim=` **wrong parameter format** `sim` is case-sensitive!\n",
-    "- PCI: `window_size=0.5` (smaller is better)"
+    "- PhaseSpace-SVM: `coef0=0,tol=0.001,project_phasespace=True,gamma=1.0,nu=0.35,degree=3,kernel=\"rbf\"` (tol, coef0: make no difference; nu: smaller is better; gamma: 0.8 is very slightly better for ROC_AUC, but worse for PR_AUC; degree: makes no difference)\n",
+    "- PST: `window_size=\"1.0 * dataset period size\",sim=` **wrong parameter format** `sim` is case-sensitive!\n",
+    "- PCI: `window_size=\"0.5 * dataset period size\"` (smaller is better)"
    ]
   },
   {
