feat: finish comparison notebook and its result analysis

--- a/notebooks/TimeEval default-optim result comparison.ipynb
+++ b/notebooks/TimeEval default-optim result comparison.ipynb
@@ -56,8 +56,6 @@
     "    import plotly.offline\n",
     "except ImportError:\n",
     "    default_use_plotly = False\n",
-    "    \n",
-    "default_use_plotly = False\n",
     "\n",
     "if default_use_plotly:\n",
     "    import plotly.offline as py\n",
@@ -1218,7 +1216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_110518/462017038.py:42: UserWarning:\n",
+      "/tmp/ipykernel_32339/4050411280.py:40: UserWarning:\n",
       "\n",
       "FixedFormatter should only be used together with FixedLocator\n",
       "\n"
@@ -1262,6 +1260,40 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "aa4d14e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_parameters(algo):\n",
+    "    print(f\"Parameters of {algo}:\")\n",
+    "    ref_params = df_ref[df_ref[\"algorithm\"] == algo][\"hyper_params\"].unique()\n",
+    "    print(\"\\n### Ref:\")\n",
+    "    param_d = {}\n",
+    "    for param_set in ref_params:\n",
+    "        param_set = json.loads(param_set)\n",
+    "        for param in param_set:\n",
+    "            if param not in param_d:\n",
+    "                param_d[param] = []\n",
+    "            param_d[param].append(param_set[param])\n",
+    "    for param in sorted(param_d):\n",
+    "        print(f\"  {param}: {np.unique(param_d[param])}\")\n",
+    "\n",
+    "    optim_params = df_optim[df_optim[\"algorithm\"] == algo][\"hyper_params\"].unique()\n",
+    "    print(\"\\n### Optim:\")\n",
+    "    param_d = {}\n",
+    "    for param_set in optim_params:\n",
+    "        param_set = json.loads(param_set)\n",
+    "        for param in param_set:\n",
+    "            if param not in param_d:\n",
+    "                param_d[param] = []\n",
+    "            param_d[param].append(param_set[param])\n",
+    "    for param in sorted(param_d):\n",
+    "        print(f\"  {param}: {np.unique(param_d[param])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "ea7db08e",
    "metadata": {
     "scrolled": false
@@ -1375,7 +1407,7 @@
        "Status.TIMEOUT      10.0  137.0      0.0    0.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,12 +1428,45 @@
    "id": "87c63946",
    "metadata": {},
    "source": [
-    "Parameters:"
+    "##### Hybrid KNN\n",
+    "\n",
+    "Error message:\n",
+    "\n",
+    "```\n",
+    "/usr/local/lib/python3.7/site-packages/torch/autograd/__init__.py:132: UserWarning: CUDA initialization: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:100.)\n",
+    "  allow_unreachable=True)  # allow_unreachable flag\n",
+    "Traceback (most recent call last):\n",
+    "  File \"/app/algorithm.py\", line 79, in <module>\n",
+    "    train(args)\n",
+    "  File \"/app/algorithm.py\", line 55, in train\n",
+    "    model.fit(data, args.modelOutput)\n",
+    "  File \"/app/hybrid_knn/hybrid_knn.py\", line 39, in fit\n",
+    "    self.dae.fit(X, callbacks=[knn_callback, save_callback])\n",
+    "  File \"/app/hybrid_knn/dae/dae.py\", line 113, in fit\n",
+    "    early_stopping.update(validation_loss)\n",
+    "  File \"/app/hybrid_knn/dae/early_stopping.py\", line 28, in update\n",
+    "    self._callback(improvement, loss)\n",
+    "  File \"/app/hybrid_knn/dae/early_stopping.py\", line 17, in _callback\n",
+    "    cb(improvement, loss, self.epochs_without_change)\n",
+    "  File \"/app/hybrid_knn/hybrid_knn.py\", line 33, in knn_callback\n",
+    "    self.knn.fit(self.dae.reduce(X))\n",
+    "  File \"/app/hybrid_knn/knn/knn.py\", line 20, in fit\n",
+    "    self.g = [self._calculate_kth_distance(s) for s in self.s]\n",
+    "  File \"/app/hybrid_knn/knn/knn.py\", line 20, in <listcomp>\n",
+    "    self.g = [self._calculate_kth_distance(s) for s in self.s]\n",
+    "  File \"/app/hybrid_knn/knn/knn.py\", line 27, in _calculate_kth_distance\n",
+    "    d[:, l] = knn.kth_neighbor_distance(X)\n",
+    "  File \"/app/hybrid_knn/knn/knn.py\", line 50, in kth_neighbor_distance\n",
+    "    distances, _ = self.nbrs.kneighbors(X, self.k, return_distance=True)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/neighbors/_base.py\", line 683, in kneighbors\n",
+    "    (n_samples_fit, n_neighbors)\n",
+    "ValueError: Expected n_neighbors <= n_samples,  but n_samples = 9, n_neighbors = 10\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "108523e4",
    "metadata": {},
    "outputs": [
@@ -1438,32 +1503,356 @@
     }
    ],
    "source": [
-    "algo = \"Hybrid KNN\"\n",
-    "print(f\"Parameters of Hybrid KNN:\")\n",
-    "ref_params = df_ref[df_ref[\"algorithm\"] == algo][\"hyper_params\"].unique()\n",
-    "print(\"\\n### Ref:\")\n",
-    "param_d = {}\n",
-    "for param_set in ref_params:\n",
-    "    param_set = json.loads(param_set)\n",
-    "    for param in param_set:\n",
-    "        if param not in param_d:\n",
-    "            param_d[param] = []\n",
-    "        param_d[param].append(param_set[param])\n",
-    "for param in sorted(param_d):\n",
-    "    print(f\"  {param}: {np.unique(param_d[param])}\")\n",
+    "list_parameters(\"Hybrid KNN\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afc24d6f",
+   "metadata": {},
+   "source": [
+    "--> Parameter configuration error: Combination of `n_estimators=1000` and `n_neighbors=10` is too large for the number of samples in our datasets.\n",
     "\n",
-    "optim_params = df_optim[df_optim[\"algorithm\"] == algo][\"hyper_params\"].unique()\n",
-    "print(\"\\n### Optim:\")\n",
-    "param_d = {}\n",
-    "for param_set in optim_params:\n",
-    "    param_set = json.loads(param_set)\n",
-    "    for param in param_set:\n",
-    "        if param not in param_d:\n",
-    "            param_d[param] = []\n",
-    "        param_d[param].append(param_set[param])\n",
-    "for param in sorted(param_d):\n",
-    "    print(f\"  {param}: {np.unique(param_d[param])}\")\n",
-    "    "
+    "--> **reduced to `n_estimators=500` and `n_neighbors=10`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4819936",
+   "metadata": {},
+   "source": [
+    "##### DBStream\n",
+    "\n",
+    "Error message:\n",
+    "\n",
+    "```\n",
+    "Error in cutree(hc, k = k) : elements of 'k' must be between 1 and 33\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "51be7973",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameters of DBStream:\n",
+      "\n",
+      "### Ref:\n",
+      "  distance_metric: ['euclidean']\n",
+      "  random_state: [42]\n",
+      "  window_size: [ 12  22  30  64 150]\n",
+      "\n",
+      "### Optim:\n",
+      "  alpha: [0.5]\n",
+      "  distance_metric: ['euclidean']\n",
+      "  lambda: [0.001]\n",
+      "  min_weight: [0]\n",
+      "  n_clusters: [50]\n",
+      "  radius: [1.3]\n",
+      "  random_state: [42]\n",
+      "  shared_density: [ True]\n",
+      "  window_size: [  8  15  20  43 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_parameters(\"DBStream\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ead07409",
+   "metadata": {},
+   "source": [
+    "--> Parameter configuration error: `n_clusters` must be below 33 and `50` is too large!\n",
+    "\n",
+    "--> **reduced to `n_clusters=30`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c73513df",
+   "metadata": {},
+   "source": [
+    "##### Bagel\n",
+    "\n",
+    "Error message:\n",
+    "\n",
+    "```\n",
+    "Traceback (most recent call last):\n",
+    "  File \"/app/algorithm.py\", line 117, in <module>\n",
+    "    train(args, kpi)\n",
+    "  File \"/app/algorithm.py\", line 84, in train\n",
+    "    early_stopping_patience=cp.early_stopping_patience\n",
+    "  File \"/app/bagel/model.py\", line 104, in __init__\n",
+    "    self.window_size + self.condition_size, self.latent_dims, self.network_size, eps=1e-4),\n",
+    "  File \"/app/bagel/network/fc_gaussian_statistic.py\", line 26, in __init__\n",
+    "    for current_size in net_size:\n",
+    "TypeError: 'int' object is not iterable\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3bd1a43a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameters of Bagel:\n",
+      "\n",
+      "### Ref:\n",
+      "  cuda: [False]\n",
+      "  early_stopping_delta: [0.05]\n",
+      "  early_stopping_patience: [10]\n",
+      "  epochs: [500]\n",
+      "  random_state: [42]\n",
+      "  split: [0.8]\n",
+      "\n",
+      "### Optim:\n",
+      "  batch_size: [64]\n",
+      "  cuda: [False]\n",
+      "  dropout: [0.1]\n",
+      "  early_stopping_delta: [0.05]\n",
+      "  early_stopping_patience: [10]\n",
+      "  epochs: [500]\n",
+      "  hidden_layer_shape: [100]\n",
+      "  latent_size: [6]\n",
+      "  random_state: [42]\n",
+      "  split: [0.8]\n",
+      "  window_size: [ 16  30  40  86 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_parameters(\"Bagel\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c7506b7",
+   "metadata": {},
+   "source": [
+    "--> `AlgorithmConfigurator` was assuming that `hidden_layer_shape: [100, 100]` is a search space instead of a single parameter value. This is also the reason, why there are duplicates!\n",
+    "\n",
+    "--> **fixed `AlgorithmConfigurator`!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e65c57d",
+   "metadata": {},
+   "source": [
+    "##### LSTM-AD\n",
+    "\n",
+    "OOM (`status code '137'`) for most datasets, but for multivariate ones, we also get:\n",
+    "\n",
+    "```\n",
+    "/usr/local/lib/python3.7/site-packages/torch/autograd/__init__.py:132: UserWarning: CUDA initialization: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:100.)\n",
+    "  allow_unreachable=True)  # allow_unreachable flag\n",
+    "Traceback (most recent call last):\n",
+    "  File \"/app/algorithm.py\", line 76, in <module>\n",
+    "    train(args)\n",
+    "  File \"/app/algorithm.py\", line 52, in train\n",
+    "    model.fit(data, args.modelOutput)\n",
+    "  File \"/app/lstm_ad/model.py\", line 125, in fit\n",
+    "    early_stopping.update(validation_loss)\n",
+    "  File \"/app/lstm_ad/early_stopping.py\", line 28, in update\n",
+    "    self._callback(improvement, loss)\n",
+    "  File \"/app/lstm_ad/early_stopping.py\", line 17, in _callback\n",
+    "    cb(improvement, loss, self.epochs_without_change)\n",
+    "  File \"/app/lstm_ad/model.py\", line 104, in cb\n",
+    "    self._estimate_normal_distribution(valid_dl)\n",
+    "  File \"/app/lstm_ad/model.py\", line 138, in _estimate_normal_distribution\n",
+    "    e = torch.abs(y[:, -1, :] - y_hat)\n",
+    "RuntimeError: The size of tensor a (3) must match the size of tensor b (150) at non-singleton dimension 1\n",
+    "```\n",
+    "\n",
+    "Exemplary datasets with this error:\n",
+    "\n",
+    "- sinus-channels-all-of-3.semi-supervised\n",
+    "- cbf-channels-all-of-3.semi-supervised\n",
+    "- ecg-channels-single-of-5.semi-supervised"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d0b2fd64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameters of LSTM-AD:\n",
+      "\n",
+      "### Ref:\n",
+      "  batch_size: [64]\n",
+      "  early_stopping_delta: [0.05]\n",
+      "  early_stopping_patience: [10]\n",
+      "  epochs: [500]\n",
+      "  learning_rate: [0.001]\n",
+      "  random_state: [42]\n",
+      "  split: [0.8]\n",
+      "  test_batch_size: [64]\n",
+      "  validation_batch_size: [64]\n",
+      "  window_size: [ 12  22  30  64 150]\n",
+      "\n",
+      "### Optim:\n",
+      "  batch_size: [64]\n",
+      "  early_stopping_delta: [0.05]\n",
+      "  early_stopping_patience: [10]\n",
+      "  epochs: [500]\n",
+      "  learning_rate: [0.001]\n",
+      "  lstm_layers: [1]\n",
+      "  prediction_window_size: [50]\n",
+      "  random_state: [42]\n",
+      "  split: [0.8]\n",
+      "  test_batch_size: [64]\n",
+      "  validation_batch_size: [64]\n",
+      "  window_size: [ 16  30  40  86 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_parameters(\"LSTM-AD\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "546d67a9",
+   "metadata": {},
+   "source": [
+    "--> **OOM** error is unfortunate, but nothing we can change!\n",
+    "\n",
+    "--> the shape error on multivariate datasets seems to be due to a change of parameter `prediction_window_size` from `1` to `50`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d10acb16",
+   "metadata": {},
+   "source": [
+    "##### EncDec-AD\n",
+    "\n",
+    "--> Reduced performance due to a lot of **timeout**s. Errors decreased.\n",
+    "\n",
+    "--> **no change necessary**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7b1e073",
+   "metadata": {},
+   "source": [
+    "##### MultiHMM\n",
+    "\n",
+    "87 error messages:\n",
+    "\n",
+    "```\n",
+    "Traceback (most recent call last):\n",
+    "  File \"/app/algorithm.py\", line 73, in <module>\n",
+    "    execute(args)\n",
+    "  File \"/app/algorithm.py\", line 54, in execute\n",
+    "    model = joblib.load(args.modelInput)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/joblib/numpy_pickle.py\", line 585, in load\n",
+    "    obj = _unpickle(fobj, filename, mmap_mode)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/joblib/numpy_pickle.py\", line 504, in _unpickle\n",
+    "    obj = unpickler.load()\n",
+    "  File \"/usr/local/lib/python3.7/pickle.py\", line 1088, in load\n",
+    "    dispatch[key[0]](self)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/joblib/numpy_pickle.py\", line 329, in load_build\n",
+    "    Unpickler.load_build(self)\n",
+    "  File \"/usr/local/lib/python3.7/pickle.py\", line 1552, in load_build\n",
+    "    setstate(state)\n",
+    "  File \"/app/multi_hmm/model.py\", line 35, in __setstate__\n",
+    "    self.hmm = pg.HiddenMarkovModel.from_json(self.hmm)\n",
+    "  File \"pomegranate/base.pyx\", line 97, in pomegranate.base.Model.from_json\n",
+    "  File \"pomegranate/hmm.pyx\", line 3264, in pomegranate.hmm.HiddenMarkovModel.from_dict\n",
+    "  File \"pomegranate/base.pyx\", line 504, in pomegranate.base.State.from_dict\n",
+    "  File \"pomegranate/distributions/distributions.pyx\", line 303, in pomegranate.distributions.distributions.Distribution.from_dict\n",
+    "  File \"<string>\", line 1, in <module>\n",
+    "NameError: name 'nan' is not defined\n",
+    "```\n",
+    "\n",
+    "25 error messages (on multivariate datasets):\n",
+    "\n",
+    "```\n",
+    "Traceback (most recent call last):\n",
+    "  File \"/app/algorithm.py\", line 71, in <module>\n",
+    "    train(args)\n",
+    "  File \"/app/algorithm.py\", line 48, in train\n",
+    "    model.fit(data, labels)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/pipeline.py\", line 341, in fit\n",
+    "    Xt = self._fit(X, y, **fit_params_steps)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/pipeline.py\", line 307, in _fit\n",
+    "    **fit_params_steps[name])\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/joblib/memory.py\", line 352, in __call__\n",
+    "    return self.func(*args, **kwargs)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/pipeline.py\", line 754, in _fit_transform_one\n",
+    "    res = transformer.fit_transform(X, y, **fit_params)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/pipeline.py\", line 387, in fit_transform\n",
+    "    return last_step.fit_transform(Xt, y, **fit_params_last_step)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/base.py\", line 702, in fit_transform\n",
+    "    return self.fit(X, y, **fit_params).transform(X)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/preprocessing/_discretization.py\", line 153, in fit\n",
+    "    X = self._validate_data(X, dtype='numeric')\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/base.py\", line 421, in _validate_data\n",
+    "    X = check_array(X, **check_params)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/utils/validation.py\", line 63, in inner_f\n",
+    "    return f(*args, **kwargs)\n",
+    "  File \"/usr/local/lib/python3.7/site-packages/sklearn/utils/validation.py\", line 698, in check_array\n",
+    "    \"if it contains a single sample.\".format(array))\n",
+    "ValueError: Expected 2D array, got 1D array instead:\n",
+    "array=[-0.11283424  1.73056285  3.66144375 ... -0.25435671 -0.27262701\n",
+    " -0.27213188].\n",
+    "Reshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cc531cf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameters of MultiHMM:\n",
+      "\n",
+      "### Ref:\n",
+      "  random_state: [42]\n",
+      "\n",
+      "### Optim:\n",
+      "  discretizer: ['choquet']\n",
+      "  n_bins: [5]\n",
+      "  random_state: [42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_parameters(\"MultiHMM\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cced57ed",
+   "metadata": {},
+   "source": [
+    "--> **fixed multivariate dataset error**\n",
+    "\n",
+    "--> **won't fix nan-error** (issue ref: [akita/timeeval-algorithms#45](https://gitlab.hpi.de/akita/timeeval-algorithms/-/issues/45))"
    ]
   },
   {
@@ -1476,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "7517d296",
    "metadata": {},
    "outputs": [
@@ -1484,7 +1873,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_110518/462017038.py:42: UserWarning:\n",
+      "/tmp/ipykernel_32339/4050411280.py:40: UserWarning:\n",
       "\n",
       "FixedFormatter should only be used together with FixedLocator\n",
       "\n"
