feat: prepare extra retry runtime experiments for benchmark and test case data

--- a/notebooks/TimeEval default-optim result comparison.ipynb
+++ b/notebooks/TimeEval default-optim result comparison.ipynb
@@ -1247,12 +1247,12 @@
    "source": [
     "#### Look into algorithms whose performance degraded\n",
     "\n",
-    "- Hybrid KNN\n",
-    "- DBStream\n",
-    "- Bagel\n",
-    "- LSTM-AD\n",
-    "- EncDec-AD\n",
-    "- MultiHMM\n",
+    "- Hybrid KNN --> **rerun**\n",
+    "- DBStream --> **rerun**\n",
+    "- Bagel --> **rerun**\n",
+    "- LSTM-AD --> **rerun**\n",
+    "- EncDec-AD --> keep\n",
+    "- MultiHMM --> **rerun**\n",
     "\n",
     "Errors and timeouts:"
    ]
