Result analysis notebook updates

--- a/notebooks/data-prep/Exathlon.ipynb
+++ b/notebooks/data-prep/Exathlon.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -2108,8 +2107,7 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -3734,9 +3732,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "timeeval",
    "language": "python",
-   "name": "python3"
+   "name": "timeeval"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3748,9 +3746,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
